fixed aligning on "Our Mission" section

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,6 +47,11 @@ header ul {
   justify-content: center;
   align-items: center;
 }
+
+.title-caption {
+  right: 100%;
+}
+
 header ul li {
   position: relative;
   list-style: none;
@@ -146,6 +151,7 @@ header .sticky ul li a {
 .container .mission {
   height: 1000px;
   text-align: center;
+  justify-content: center;
 }
 .container .mission h1 {
   text-align: center;
@@ -154,6 +160,11 @@ header .sticky ul li a {
   color: #003459;
   padding-top: 150px;
   padding-bottom: 50px;
+  justify-content: center;
+}
+
+.mission-title {
+  padding-left: 170px;
 }
 .imgmis {
   width: auto;
@@ -161,18 +172,27 @@ header .sticky ul li a {
   border-radius: 20px;
 }
 .img1 {
-  padding-left: 100px;
+  padding-left: 120px;
 }
 .img2 {
+  margin-top: 250px;
   padding-left: 880px;
 }
 .p1 {
   font-family: "Montserrat Alternates", sans-serif;
-  text-align: right;
+  padding-right: 50px;
   font-weight: bold;
+  font-size: 30px;
+  text-align: right;
+  margin-top: -160px;
 }
 .p2 {
   text-align: left;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  padding-left: 100px;
+  margin-top: -180px;
 }
 /*help*/
 .container .help {
